# project-templates

./: README.md
cuda-cmake/: CMakeLists.txt  main.cu
cuda-cmake-kernel-lib/: CMakeLists.txt  kernel.cu  kernel.h  main.cpp
cuda-cmake-kernel-lib-nvidia-cccl/: CMakeLists.txt  main.cpp
cuda-minimal/: Readme.md  main.cu
image_io_cimg/: CMakeLists.txt  Readme.md
image_io_stb/: CMakeLists.txt  Readme.md  main.cpp
